discussion/kv_engine/159767/159767_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47790: Propagate KVStore::scan errors from DCPBackfillDisk

If a KVStore detects corruption during a scan, it fails and an error
is returned to the caller. However in the case of DCPBackfillDisk, it
did not check for such an error and instead incorrectly assumed the
scan had completed successfully. This resulted in a rebalance hang as
no more mutations were sent by the Producer to complete the backfill.

Address this by correctly propogating the error back to the DCP stream
by setting it to dead(BACKFILL_FAIL).

Change-Id: I8ce618bceaf8e140adb0a94f6c746440b913202f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-08-20 09:21:14.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-20 09:49:37.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10256/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_kvstore.cc b/engines/ep/tests/mock/mock_kvstore.cc
index cf150bd64..a52f3530a 100644
--- a/engines/ep/tests/mock/mock_kvstore.cc
+++ b/engines/ep/tests/mock/mock_kvstore.cc
@@ -35,19 +35,20 @@ MockKVStore::MockKVStore() {
                 vbucket_state state;
                 state.maxVisibleSeqno = 1;
                 std::vector&lt;Collections::KVStore::DroppedCollection&gt; dropped;
-                return std::make_unique&lt;BySeqnoScanContext&gt;(std::move(cb),
-                                                            std::move(cl),
-                                                            vbid,
-                                                            std::make_unique&lt;KVFileHandle&gt;(),
-                                                            startSeqno,
-                                                            1,
-                                                            0,
-                                                            options,
-                                                            valOptions,
-                                                            1,
-                                                            state,
-                                                            dropped,
-                                                            std::optional&lt;uint64_t&gt;{});
+                return std::make_unique&lt;BySeqnoScanContext&gt;(
+                        std::move(cb),
+                        std::move(cl),
+                        vbid,
+                        std::make_unique&lt;KVFileHandle&gt;(),
+                        startSeqno,
+                        1,
+                        0,
+                        options,
+                        valOptions,
+                        1,
+                        state,
+                        dropped,
+                        std::optional&lt;uint64_t&gt;{});
             }));
 }
 
diff --git a/engines/ep/tests/module_tests/backfill_disk_test.cc b/engines/ep/tests/module_tests/backfill_disk_test.cc
index 37495deb9..7e062fca0 100644
--- a/engines/ep/tests/module_tests/backfill_disk_test.cc
+++ b/engines/ep/tests/module_tests/backfill_disk_test.cc
@@ -48,8 +48,10 @@ TEST_F(DCPBackfillDiskTest, ScanDiskError) {
     // context, then a scan() call which we cause to fail, followed by destroy
     // of scan context.
     auto&amp; mockKVStore = MockKVStore::replaceROKVStoreWithMock(*store, 0);
-    EXPECT_CALL(mockKVStore, initBySeqnoScanContext(_, _, _, _, _, _, _)).Times(1);
-    EXPECT_CALL(mockKVStore, scan(An&lt;BySeqnoScanContext&amp;&gt;())).WillOnce(Return(scan_failed));
+    EXPECT_CALL(mockKVStore, initBySeqnoScanContext(_, _, _, _, _, _, _))
+            .Times(1);
+    EXPECT_CALL(mockKVStore, scan(An&lt;BySeqnoScanContext&amp;&gt;()))
+            .WillOnce(Return(scan_failed));
 
     // Create producer now we have items only on disk.
     auto producer = std::make_shared&lt;MockDcpProducer&gt;(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10256/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/200/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/mock/mock_kvstore.h b/engines/ep/tests/mock/mock_kvstore.h
index a1d493dd7..2f6c5a4c9 100644
--- a/engines/ep/tests/mock/mock_kvstore.h
+++ b/engines/ep/tests/mock/mock_kvstore.h
@@ -30,7 +30,7 @@ struct TransactionContext;
 class MockKVStore : public KVStore {
 public:
     MockKVStore();
-    virtual ~MockKVStore();
+    ~MockKVStore() override;
 
     MOCK_METHOD(void, deinitialize, (), (override));
     MOCK_METHOD(void,
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/200/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/mock/mock_kvstore.h:33:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~MockKVStore();
    ~~~~~~~~^
                           override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/mock/mock_kvstore.h:33:5: note: FIX-IT applied suggested code changes
    virtual ~MockKVStore();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/mock/mock_kvstore.h:33:27: note: FIX-IT applied suggested code changes
    virtual ~MockKVStore();
                          ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/mock/mock_kvstore.h b/engines/ep/tests/mock/mock_kvstore.h
index a1d493dd7..2f6c5a4c9 100644
--- a/engines/ep/tests/mock/mock_kvstore.h
+++ b/engines/ep/tests/mock/mock_kvstore.h
@@ -30,7 +30,7 @@ struct TransactionContext;
 class MockKVStore : public KVStore {
 public:
     MockKVStore();
-    virtual ~MockKVStore();
+    ~MockKVStore() override;
 
     MOCK_METHOD(void, deinitialize, (), (override));
     MOCK_METHOD(void,
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/200/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/297/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-cheshire-cat\third_party\googletest\googletest\include\gtest/gtest-printers.h(157): error C2027: use of undefined type "VB::Commit" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/297/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/203/ : FAILURE

Failure of GoogleTest "FullAndValueEviction/DefragmenterTest.MappedMemory/Value":

<pre>
[ RUN      ] FullAndValueEviction/DefragmenterTest.MappedMemory/Value
[2021-08-20T09:41:29.239Z] ../kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:243: Failure
[2021-08-20T09:41:29.239Z] Expected: (current_mapped) >= (size_t(0.80 * double(previous_mapped))), actual: 3653632 vs 3889561
[2021-08-20T09:41:29.239Z] current_mapped memory (which is 3653632) is lower than 80% of previous mapped (which is 4861952). 
[2021-08-20T09:41:29.239Z] [  FAILED  ] FullAndValueEviction/DefragmenterTest.MappedMemory/Value, where GetParam() = (Value, false) (61 ms)
FullAndValueEviction/DefragmenterTest.MappedMemory/Value
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/203/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/207/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/207/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/206/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/207/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/119/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
